--- a/projects/visual-inductive-proof.html
+++ b/projects/visual-inductive-proof.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+    //prevent fouc
+    (function () {
+      const savedTheme = localStorage.getItem('theme') || 'light-mode';
+      document.documentElement.classList.add(savedTheme);
+
+      const root = document.documentElement;
+      root.classList.add(savedTheme);
+
+      root.setAttribute('data-bs-theme', savedTheme == 'dark-mode' ? 'dark' : 'light');
+    })();
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Visual Inductive Proof | Joshua Ganschow Portfolio</title>
@@ -12,7 +24,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   
 </head>
-<body class="light-mode">
+<body>
   
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
