--- a/tools.html
+++ b/tools.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <script>
+    //prevent fouc
+    (function () {
+      const savedTheme = localStorage.getItem('theme') || 'light-mode';
+      document.documentElement.classList.add(savedTheme);
+
+      const root = document.documentElement;
+      root.classList.add(savedTheme);
+
+      root.setAttribute('data-bs-theme', savedTheme == 'dark-mode' ? 'dark' : 'light');
+    })();
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mathematical Tools | Joshua Ganschow Portfolio</title>
-  
+
+  <!-- Custom JS -->
+  <script defer src="assets/js/script.js"></script>
+
+
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
-  
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+
+
 </head>
-<body class="light-mode">
-  
+
+<body>
+
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Joshua Ganschow</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -44,12 +64,13 @@
       </div>
     </div>
   </nav>
-  
+
   <!-- Main Content -->
   <div class="container mt-5 pt-5">
     <h2 class="text-center mb-4">Mathematical Tools</h2>
-    <p class="text-center mb-5">Explore the mathematical tools I've developed. These tools are built using JavaScript for seamless integration on the web.</p>
-    
+    <p class="text-center mb-5">Explore the mathematical tools I've developed. These tools are built using JavaScript
+      for seamless integration on the web.</p>
+
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
       <div class="col">
         <div class="tool-card text-center">
@@ -105,12 +126,10 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  
+
   <!-- Pasch Checker JS (Ensure it's loaded if needed) -->
   <script src="assets/js/pasch-checker.js"></script>
-  
-  <!-- Custom JS -->
-  <script src="assets/js/script.js"></script>
-  
+
 </body>
+
 </html>
