--- a/tools/is-steiner-triple-system.html
+++ b/tools/is-steiner-triple-system.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
 </head>
-<body class="light-mode">
+<body>
     
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
