--- a/tools/prufer-code-decoder.html
+++ b/tools/prufer-code-decoder.html
@@ -24,7 +24,7 @@
         }
     </style>
 </head>
-<body class="light-mode"> <!-- Change to 'dark-mode' if you prefer dark mode by default -->
+<body>
     
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
