Update about page with summer activities including internship information

--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
             <p>
                 Hello! I'm Joshua Ganschow, a Computer Science and Mathematics student at Dakota State University with a
                 strong background in competitive programming and algorithm design for combinatorics and graph theory. I
-                enjoy creating impactful projects and continuously expanding my knowledge in the fields of graph theory,
-                combinatorics, and all things computer science.
+                enjoy working on cool projects and continuously expanding my knowledge in the fields of graph theory,
+                combinatorics, and all things computer science and math.
             </p>
         </section>
 
@@ -81,9 +81,11 @@
             <h3>Skills</h3>
             <ul class="list-group">
                 <li class="list-group-item">Programming Languages: Python, JavaScript, C++, C#</li>
-                <li class="list-group-item">Web Development: HTML, CSS, Bootstrap</li>
-                <li class="list-group-item">Data Analysis: Pandas, NumPy, Matplotlib, Multiprocessing</li>
-                <li class="list-group-item">Tools & Platforms: Git, GitHub, Visual Studio</li>
+                <li class="list-group-item">Frameworks: .NET, Flask, Django</li>
+                <li class="list-group-item">Web Development: HTML, CSS, Bootstrap, ASP.NET (Razor/Blazor)</li>
+                <li class="list-group-item">Data: SQL, Entity Framework, Pandas, NumPy, Matplotlib, Multiprocessing, Database Design, MVC Pattern</li>
+                <li class="list-group-item">Tools & Platforms: Git, GitHub, Visual Studio, SSMS, Azure DevOps</li>
+                <li class="list-group-item">Other: RESTful and Minimal APIs, Azure (Cloud Platform), OAuth2.0 (OIDC)</li>
             </ul>
         </section>
 
@@ -91,7 +93,6 @@
         <section id="experience" class="mb-5">
             <h3>Experience</h3>
             <div class="accordion" id="experienceAccordion">
-                <!-- Experience Item 1 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -119,7 +120,6 @@
                     </div>
                 </div>
 
-                <!-- Experience Item 2 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -140,9 +140,8 @@
                     </div>
                 </div>
 
-                <!-- Experience Item 3 -->
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
+                    <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             Competitive Programming Leader for DSU Programming Club
@@ -157,8 +156,31 @@
                                     State University</li>
                                 <li>Led team to national-level competition for the International Collegiate Programming
                                     Contest (NAPC of ICPC)</li>
-                                <li>Host weekly practice sessions for students interested in competitive programming,
-                                    filling a niche left unfulfilled by our curriculum</li>
+                                <li>Host weekly practice sessions for students interested in competitive programming</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            Software Engineering Intern at Omnitech, Inc.
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                        data-bs-parent="#experienceAccordion">
+                        <div class="accordion-body">
+                            <strong>May 2025 - Present</strong>
+                            <ul>
+                                <li>Leveraged ASP.NET, C#, SQL, HTML, CSS, and JS to create a web-based memory game.</li>
+                                <li>Gained extensive experience working with Azure tooling, including web app deployment through automated pipelines and SQL Server with authentication through Microsoft Entra using OIDC.</li>
+                                <li>Collaborated with a group of other interns to create an internal web app for browsing a directory of employees.</li>
+                                <li>Developed skills with git for version control and collaboration with others on a large project.</li>
+                                <li>Sharpened skills in development of performant software in a professional setting facilitated through pair programming with full-time engineers.</li>
+                                <li>Participated in a book club reading Uncle Bob's <i>Clean Code</i>, gaining valuable insight from engineers regarding the content of the book.</li>
+                                <li>Participated in many learning opportunities presented by experienced engineers, including deep dives into best practices for architecture, system design, automated testing, and containerization software like Docker.</li>
                             </ul>
                         </div>
                     </div>
@@ -182,20 +204,43 @@
                     <div class="accordion-body">
                         <strong>Dakota State University, Madison, South Dakota</strong>
                         <p>2023 - 2026 (anticipated)</p>
-                        <p>GPA: 3.95</p>
+                        <p>GPA: 3.96</p>
                         <ul>
                             <li>Relevant coursework</li>
                             <ul>
-                                <li>Computer Science I and II</li>
+                                <li>Programming Fundamentals</li>
                                 <li>Data Structures</li>
                                 <li>Object-Oriented Design</li>
                                 <li>Structured Systems Analysis</li>
                                 <li>Discrete Mathematics</li>
+                                <li>Combinatorics / Combinatorial Designs</li>
+                                <li>Linear Algebra</li>
+                                <li>Game Theory</li>
                                 <li>Statistics</li>
-                                <li>Calculus I</li>
+                                <li>Calculus</li>
+                                <li>Number Theory and Cryptography</li>
                                 <li>Assembly Language</li>
                             </ul>
                         </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="eduHeadingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#eduCollapseTwo" aria-expanded="false" aria-controls="eduCollapseTwo">
+                        Masters of Science in Computer Science
+                    </button>
+                </h2>
+                <div id="eduCollapseTwo" class="accordion-collapse collapse" aria-labelledby="eduHeadingTwo"
+                    data-bs-parent="#educationAccordion">
+                    <div class="accordion-body">
+                        <strong>Dakota State University, Madison, South Dakota</strong>
+                        <p>2025 - 2027 (anticipated)</p>
+                        <p>4+1 Program offered through DSU will enable me to finish masters in just 1 additional year. This 
+                            is possible because I am able to take "dual-credit" classes that count for both Bachelors
+                            and Masters in the final year of BS program.
+                        </p>
                     </div>
                 </div>
             </div>
