Update pages to prevent FOUC
Additionally, edited link in STS project to direct to correct section of wikipedia page

--- a/tools/steiner-triple-generator.html
+++ b/tools/steiner-triple-generator.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        //prevent fouc
+        (function () {
+          const savedTheme = localStorage.getItem('theme') || 'light-mode';
+          document.documentElement.classList.add(savedTheme);
+    
+          const root = document.documentElement;
+          root.classList.add(savedTheme);
+    
+          root.setAttribute('data-bs-theme', savedTheme == 'dark-mode' ? 'dark' : 'light');
+        })();
+      </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steiner Triple Systems Generator | Joshua Ganschow Portfolio</title>
